<resources>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="about">About</string>

    <string name="home_content_description">A super nice (pre-search) content here.</string>

    <string name="search_icon_content_descriptor">Home_search</string>
</resources>
